# linux

./: Cargo.toml  Justfile  README.md  config.toml.example  meson-build-rust.sh  meson.build
assets/: green-32x32.rgba  red-32x32.rgba
src/: clipboard.rs  exit.rs  exit_handler.rs  local_clipboard.rs  main.rs  main_loop.rs  mpclipboard.rs  timer.rs  tray.rs
src/clipboard/: local_reader.rs  local_writer.rs  mod.rs  reader.rs  writer.rs
src/exit/: handler.rs  mod.rs
src/mpclipboard/: bindings.rs  event.rs  mod.rs
src/tray/: buffer.rs  event.rs  line.rs  mod.rs  state.rs
systemd/: meson.build  mpclipboard-client.service
